# flashkey-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: flashkey-mcp-upgrade.service  flashkey-mcp-upgrade.timer  flashkey-mcp.service
docs/: DESIGN.md  TOOLS.md
flashkey_mcp/: __init__.py  server.py
skills/flashkey-mcp/: SKILL.md
skills/flashkey-mcp-ai-m61-m62/: SKILL.md
skills/flashkey-mcp-ai-wb2/: SKILL.md
skills/flashkey-mcp-bl602/: SKILL.md
skills/flashkey-mcp-bl616-618/: SKILL.md
src/flashkey_mcp/: __init__.py  _guard.py  auth.py  colors.py  commands.py  device_manager.py  protocol.py  server.py  transport.py
tests/: debug_ping.py  test_auth.py  test_commands.py  test_flash_break_mode.py  test_mcp_server.py  test_s1_handshake.py  test_s1_handshake_debug.py
