[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashkey-mcp"
version = "0.0.1"
description = "FlashKey FK-01 MCP server — AI-native USB programmer & debugger"
requires-python = ">=3.8"
dependencies = [
    "pyserial>=3.5",
    "mcp>=1.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.38",
    "uvicorn>=0.30",
]

[project.license]
text = "MIT"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
flashkey-mcp = "flashkey_mcp.server:main"

[tool.setuptools.package-data]
flashkey_mcp = ["py.typed"]
